--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-Flask==0.12.2
-spacy==2.0.5
-gensim==3.2.0
+Flask==1.1.2
+gensim==3.8.3
+nltk==3.5
+scikit_learn==0.24.1
+spacy==3.0.5
+scipy==1.6.1
